CHANGES-1.1.txt
---------------

CHANGES IN CUPS V1.1.16

	- The scheduler did not send a printer-state-message
	  attribute if the string was empty; it now always sends
	  this attribute.  This caused the printer message to be
	  displayed for other printers in the web interface.
	- The LPD backend now supports a "manual_copies" option,
	  e.g.: "lpd://server/queue?manual_copies=no", in order
	  to handle copies for raw jobs to printers that don't
	  implement the LPD protocol properly...
	- The "mirror" option was not being handled by the
	  PostScript or image filters.
	- Updated the cupsaddsmb command to support the new CUPS
	  driver for Windows NT/2k/XP.
	- Filter status lines longer than 1023 characters could
	  cause the scheduler to get into an infinite loop.
	- The scheduler didn't reset the job state to pending
	  when modifying an active printer.
	- Now limit the maximum number of recursion steps when
	  searching for a filter for a job, in case a user
	  defines a circular filter rule.
	- The PostScript filter would embed an invalid
	  requirements comment in some cases.
	- Added support for embedded job tickets in PostScript
	  files.
	- The PostScript filter now detects EPS files and should
	  better handle printing EPS files.
	- The cancel command now ignores a trailing destination
	  name when cancelling a specific job ID (Solaris
	  compatibility).
	- The scheduler now rejects jobs with copies outside the
	  range of 1 to MaxCopies, inclusive.
	- Added new MaxCopies directive to set the maximum
	  number of copies that a user can request.
	- The scheduler didn't block signals while it processed
	  others and when it forked processes.
	- The scheduler checked for new jobs to print when
	  stopping a job.  This caused jobs to restart before a
	  shutdown.
	- Updated the CUPS startup script to better support
	  different timezones and to support the RedHat/Mandrake
	  init script functions, if available.